2024-02-29T01:02:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8089388525 # 159
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 13 117
* notice: prev accum: outdated-unq outdated-all / unq all: 581 3076 / 594 3188
* notice: next accum: outdated-unq outdated-all / unq all: 581 3076 / 595 3193
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
* notice: removed / changed dates: [] / [2024-02-28]

2024-02-28T01:02:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8073635744 # 156
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-28
* notice: last 14d: unq all: 12 112
* notice: prev accum: outdated-unq outdated-all / unq all: 580 3074 / 594 3188
* notice: next accum: outdated-unq outdated-all / unq all: 581 3076 / 594 3188
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-14] / []

2024-02-27T16:19:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8067941750 # 155
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
* notice: last 14d: unq all: 13 114
* notice: prev accum: outdated-unq outdated-all / unq all: 579 3071 / 592 3152
* notice: next accum: outdated-unq outdated-all / unq all: 580 3074 / 594 3188
* notice: prev exec diff / last date diff / accum: unq all: +2 +36 -0 -0 / +2 +36 -0 -0 / 2 36
* notice: removed / changed dates: [2024-02-13] / [2024-02-27]

2024-02-27T01:03:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8057953819 # 153