@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-29T01:02:50Z",
-  "count_outdated" : 3076,
-  "uniques_outdated" : 581,
+  "timestamp" : "2024-03-01T01:09:28Z",
+  "count_outdated" : 3081,
+  "uniques_outdated" : 582,
   "count" : 3193,
   "uniques" : 595,
   "views" : [
-    {
-      "timestamp": "2024-02-15T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 3, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-19T00:00:00Z",
       "count": 10,
