@@ -1,12 +1,7 @@
 {
-  "count": 117,
-  "uniques": 13,
+  "count": 112,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2024-02-15T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-19T00:00:00Z",
       "count": 10,
